--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./asset/CSS/style.css">
 </head>
 <body>
+    <ul class="lista"></ul>
     <script src="./asset/JS/main.js"></script>
 </body>
 </html>
